--- a/yahooproject/Gemfile
+++ b/yahooproject/Gemfile
@@ -3,6 +3,8 @@ source 'https://rubygems.org'
 gem "paperclip", "~> 4.3"
 gem 'hirb'
 gem 'awesome_print'
+gem 'figaro'
+
 
 gem 'httparty'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
